--- a/style.css
+++ b/style.css
@@ -13,6 +13,26 @@ body {
   color: #313B50;
 	}
 
+  /* ローディング画面 */
+
+  .loader {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: #fff;
+    z-index: 555;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .loader .txt {
+    font-size: 45px;
+    font-weight: bold;
+  　color: rgb(30, 50, 93);
+  }
+
 h1 {
   font-weight: normal;
   font-size: 43px;
@@ -143,7 +163,7 @@ header a:link {
     margin-bottom: 20rem;
     height: auto;
     background-color: inherit;
-
+    padding-top: 12rem;
   }
 
   section h1 {
@@ -153,7 +173,9 @@ header a:link {
 
   #pattern {
     margin: auto;
-    width: 1120px;
+    max-width: 1120px;
+    width: 100%;
+
   }
 
   #pattern h1 {
@@ -190,65 +212,37 @@ header a:link {
 
   .imglist_cards {
     overflow: hidden;
+    display: flex;
   }
 
-  .imgcard_01 {
+  .imglist_cards img {
+    width: 100%;
+    height: auto;
+  }
+
+  .imgcard {
     overflow: hidden;
-    width: 352px;
-    height: 352px;
     margin-bottom: 32px;
     margin-right: 32px;
-    float: left;
     position: relative;
   }
 
-  .imgcard_02 {
+  .imgcard_size {
     overflow: hidden;
-    width: 391.498px;
-    height: 391.498px;
     margin-bottom: 32px;
     margin-right: 32px;
-    float: left;
     position: relative;
   }
 
-  .imgcard_02-2 {
-    overflow: hidden;
-    width: 695.9964px;
-    height: 391.498px;
-    margin-bottom: 32px;
-    margin-right: 32px;
-    float: left;
-    position: relative;
-  }
-
-  .imgcard_03 {
-    overflow: hidden;
-    width: 544px;
-    height: 544px;
-    margin-bottom: 32px;
-    margin-right: 32px;
-    float: left;
-    position: relative;
-  }
-
-  .imgcard_03-2 {
-    overflow: hidden;
-    width: 544px;
-    height: 544px;
-    margin-bottom: 32px;
-    margin-right: 32px;
-    float: left;
-    position: relative;
+  .imgcard_size img {
+    max-width: 1120px;
+    width: 100%;
+    height: auto;
+    aspect-ratio: 10/4;
   }
 
   .imgcard_right {
     margin-right: 0;
-  }
-
-  .imgcard img {
-    width: 100%;
-    height: auto;
   }
 
   .concept-img {
