--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
   color: #313B50;
 	}
 
-  /* ローディング画面 */
+  /* ローディング画面
 
   .loader {
     position: fixed;
@@ -26,12 +26,21 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  .loader .txt {
-    font-size: 45px;
-    font-weight: bold;
-  　color: rgb(30, 50, 93);
-  }
+  }*/
+
+  .loader {
+    width: 100%;
+    height: 100vh;
+transition: all 1s;
+background-color: #fff;
+position: fixed;
+top: 0;
+left: 0;
+display: flex;
+justify-content: center;
+align-items: center;
+z-index: 9999;
+}
 
 h1 {
   font-weight: normal;
