--- a/style.css
+++ b/style.css
@@ -29,19 +29,22 @@ body {
   }*/
 
   .loader {
-    width: 100%;
+    width: 100vw;
     height: 100vh;
-transition: all 1s;
-background-color: #fff;
-position: fixed;
-top: 0;
-left: 0;
-display: flex;
-justify-content: center;
-align-items: center;
-z-index: 9999;
-opacity: 0;
-visibility: hidden;
+    transition: all 1s;
+    background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loaded {
+  opacity: 0;
+  visibility: hidden;
 }
 
 h1 {
