--- a/style.css
+++ b/style.css
@@ -512,10 +512,13 @@ header a:link {
   #home_text h1 {
   margin-bottom: 2rem;
   font-size: 12px;
+  font-weight: normal;
   }
 
   #home_text p {
   font-size: 10px;
+  font-weight: normal;
+  line-height: 200%;
   }
 
   section {
@@ -547,7 +550,7 @@ header a:link {
     display: none;
   }
 
-  .foot-wrap img{
+  .foot-wrap img {
     display: none;
   }
 
