--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ header a:link {
 }
 
 #main {
-	width:75%;
+	width:85%;
   height:auto;
   margin-top: 6rem;
 }
@@ -170,18 +170,17 @@ header a:link {
 
     #home_text h1 {
     margin-bottom: 2rem;
-    font-size: 20px;
+    font-size: 28px;
     }
 
     #home_text p {
-    font-size: 13px;
+    font-size: 18px;
     }
 
   section {
-    padding-left: 50px;
-    padding-right: 50px;
+    padding: 200px;
     margin-top: 10rem;
-    margin-bottom: 20rem;
+    margin-bottom: 15rem;
     height: auto;
     background-color: inherit;
     padding-top: 12rem;
@@ -204,8 +203,8 @@ header a:link {
   }
 
   #pattern p {
-    font-size: 13px;
-    line-height: 200%;
+    font-size: 10px;
+    line-height: 170%;
     margin-bottom: 50px;
   }
 
@@ -334,6 +333,10 @@ header a:link {
   }
 
 @media only screen and (max-width: 768px) {
+
+  section {
+    padding: 50px;
+  }
 
   #MenuButton {
     display: block;
