--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ body {
     align-items: center;
   }*/
 
+  #mute {
+    padding-bottom: 100px;
+  }
+
   #loading {
     width: 100vw;
     height: 100vh;
